# resume-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: build_meta.json  index.html  script.js  styles.css
src/resume_agent_crewai/: feedback.txt  main.py
src/resume_agent_crewai/artifacts/: build_meta.json  review.json
src/resume_agent_crewai/crews/resume_crew/: __init__.py  resume_crew.py
src/resume_agent_crewai/crews/resume_crew/config/: agents.yaml  tasks.yaml
src/resume_agent_crewai/crews/website_crew/: __init__.py  website_crew.py
src/resume_agent_crewai/crews/website_crew/config/: agents.yaml  tasks.yaml
src/resume_agent_crewai/tools/: __init__.py  pdf_tool.py
